apps/base/podinfo/k8s-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - port: 80
      targetPort: 9898
      protocol: TCP
      name: http
