apps/base/podinfo/k8s-network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app
spec:
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
